nohup.out
 * Running on http://0.0.0.0:2074/
 * Restarting with reloader
 * Detected change in '/home/pherox/Unome/models.py', reloading
 * Restarting with reloader
Traceback (most recent call last):
  File "unome.py", line 2, in <module>
    from models import User, DB
  File "/home/pherox/Unome/models.py", line 15
    def init_db()
                ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "unome.py", line 3, in <module>
    from twitter_oauth import *
ImportError: No module named twitter_oauth
 * Running on http://0.0.0.0:2074/
 * Restarting with reloader
211.210.80.149 - - [20/Oct/2012 19:22:39] "GET / HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:22:39] "GET /static/css/style.css HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:22:39] "GET /static/css/font-awesome.css HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:22:39] "GET /static/css/base.css HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:22:40] "GET /static/css/font-awesome-ie7.css HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:22:40] "GET /static/font/fontawesome-webfont.woff HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:22:40] "GET /favicon.ico HTTP/1.1" 404 -
211.210.80.149 - - [20/Oct/2012 19:23:11] "GET /twitter_login HTTP/1.1" 302 -
211.210.80.149 - - [20/Oct/2012 19:23:16] "GET /oauth-athorized?next=http%3A%2F%2F1.234.21.70%3A2074%2F&oauth_token=1kSpijhevgMvd1nup7XTYwhqDkjxZhv4ZnJPxOny6J8&oauth_verifier=hL0NlYJMvxVBnRFRbAkMym51ogzjgdEQhlsBgplXJvk HTTP/1.1" 500 -
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1518, in __call__
    return self.wsgi_app(environ, start_response)
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1506, in wsgi_app
    response = self.make_response(self.handle_exception(e))
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1504, in wsgi_app
    response = self.full_dispatch_request()
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1264, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1262, in full_dispatch_request
    rv = self.dispatch_request()
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1248, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "/usr/local/lib/python2.7/dist-packages/flask_oauth.py", line 433, in decorated
    return f(*((data,) + args), **kwargs)
  File "/home/pherox/Unome/unome.py", line 75, in oauth_authorized
    db_session.add(user)
NameError: global name 'db_session' is not defined
211.210.80.149 - - [20/Oct/2012 19:23:16] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:23:16] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=jquery.js HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:23:16] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:23:16] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=ubuntu.ttf HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:23:16] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:23:16] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=source.png HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:23:16] "GET /favicon.ico HTTP/1.1" 404 -
 * Detected change in 'unome.py', reloading
-------OAuth Authorized Phase-------
 * Restarting with reloader
211.210.80.149 - - [20/Oct/2012 19:25:22] "GET /oauth-athorized?next=http%3A%2F%2F1.234.21.70%3A2074%2F&oauth_token=1kSpijhevgMvd1nup7XTYwhqDkjxZhv4ZnJPxOny6J8&oauth_verifier=hL0NlYJMvxVBnRFRbAkMym51ogzjgdEQhlsBgplXJvk HTTP/1.1" 500 -
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1518, in __call__
    return self.wsgi_app(environ, start_response)
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1506, in wsgi_app
    response = self.make_response(self.handle_exception(e))
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1504, in wsgi_app
    response = self.full_dispatch_request()
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1264, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1262, in full_dispatch_request
    rv = self.dispatch_request()
  File "/usr/local/lib/python2.7/dist-packages/Flask-0.8-py2.7.egg/flask/app.py", line 1248, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "/usr/local/lib/python2.7/dist-packages/flask_oauth.py", line 427, in decorated
    data = self.handle_oauth1_response()
  File "/usr/local/lib/python2.7/dist-packages/flask_oauth.py", line 379, in handle_oauth1_response
    type='invalid_response', data=data)
OAuthException: Invalid response from twitter
211.210.80.149 - - [20/Oct/2012 19:25:22] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:25:22] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=jquery.js HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:25:22] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:25:22] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:25:22] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=source.png HTTP/1.1" 200 -
211.210.80.149 - - [20/Oct/2012 19:25:22] "GET /oauth-athorized?__debugger__=yes&cmd=resource&f=ubuntu.ttf HTTP/1.1" 200 -
